# archie

./: .env.dist.sh  .gitignore  .gitlab-ci.yml  .p10k-classic.zsh  .p10k-lean.zsh  .p10k-portable.zsh  .p10k-pure.zsh  .toc-markdown.toml  .zshrc  AGENTS.md  BACKUP_AND_RESTORE.md  CHANGELOG.md  CLAUDE.md  CONTAINERS.md  CONTRIBUTING.md  DEVELOPMENT.md  GUIDE.md  KEYBOARD_SHORTCUTS.md  LICENSE  README.md  pyproject.toml
archie/: README.md
archie/agents/: README.md
archie/milestones/: README.md  stow-migration-01-design.md
bug-reports/: README.md
bug-reports/0001-nitro-bluetooth-regression/: README.md
ci/: push-github-mirror.sh
copy-deployed-files/: README.md
docs/: BACKUP_AND_RESTORE.md  DEVELOPMENT.md  GUIDE.md  KEYBOARD_CUSTOMIZATIONS.md  KEYBOARD_SHORTCUTS.md  MIGRATING.md  README.md  REPRODUCIBLE_ENVIRONMENT.md
docs/epics/: guix.md  (+9 more)
dunst/: dunstrc
hypr/: .gitignore  hyprland.conf  hyprlock.conf  hyprpaper.conf  hyprpaper.dist.conf  hyprshade.dist.toml
k9s/: config.yaml
kitty/: current-theme.conf  kitty.conf
lvim/: config.lua  lazy-lock.json
maint-scripts/: README.md  update-markdown-toc-build.sh
nvim/: CLAUDE.md  lazy-lock.json  lazyvim.json
onedrive/: config  sync_list
rofi/: config.rasi
scripts/: cleanup-archie-instance.sh  create-arch-base-image.sh  install.sh  launch-archie-instance.sh  launch-console.sh  open-shell.sh  push-github-mirror.sh  quickstart.sh  setup-shared-clipboard.sh
tests/: __init__.py  test_cli.py  test_downgrade.py  test_monitor.py  test_system.py
waybar/: config  style.css
xkb-customizations/: 00-xkb.hook
(+166 files in other folders)
