[project]
name = "archie"
version = "0.1.0"
authors = [
    { name = "Gabriel Chamon", email = "gchamon@tuta.io" },
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
archie = "archie.cli:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
]
